[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/png-clipart-cartoon-orc-fantasy-orc-legendary-creature-vertebrate.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MenudeCombate.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 4
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0, 0, 1 )
corner_detail = 10
shadow_color = Color( 1, 1, 1, 0.6 )

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.54902 )

[node name="Principal" type="Node2D"]
scale = Vector2( 1.80536, 1.78328 )

[node name="Tween" type="Tween" parent="."]

[node name="MenudeCombate" type="Control" parent="."]
margin_right = 1063.0
margin_bottom = 605.0
script = ExtResource( 2 )

[node name="Botones" type="VBoxContainer" parent="MenudeCombate"]
margin_left = 70.0
margin_top = 70.0
margin_right = 190.0
margin_bottom = 290.0
rect_scale = Vector2( 1, 1.5 )
custom_constants/separation = 20

[node name="Mazmorra" type="Button" parent="MenudeCombate/Botones"]
margin_right = 120.0
margin_bottom = 20.0
text = "Mazmorra"

[node name="Inventario" type="Button" parent="MenudeCombate/Botones"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 60.0
text = "Inventario"

[node name="Habilidades" type="Button" parent="MenudeCombate/Botones"]
margin_top = 80.0
margin_right = 120.0
margin_bottom = 100.0
text = "Habilidades"

[node name="Talentos" type="Button" parent="MenudeCombate/Botones"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 140.0
text = "Talentos"

[node name="Opciones" type="Button" parent="MenudeCombate/Botones"]
margin_top = 160.0
margin_right = 120.0
margin_bottom = 180.0
text = "Opciones"

[node name="Salir" type="Button" parent="MenudeCombate/Botones"]
margin_top = 200.0
margin_right = 120.0
margin_bottom = 220.0
text = "Salir"

[node name="MazmorraMenu2" type="Container" parent="MenudeCombate"]
margin_top = 20.0
margin_right = 120.0
margin_bottom = 20.0
script = SubResource( 1 )

[node name="Barras" type="HBoxContainer" parent="MenudeCombate/MazmorraMenu2"]
margin_left = 400.0
margin_top = 400.0
margin_right = 450.0
margin_bottom = 414.0
rect_rotation = 90.0
rect_scale = Vector2( 5, 8 )

[node name="VidaEnemigo" type="ProgressBar" parent="MenudeCombate/MazmorraMenu2/Barras"]
modulate = Color( 1, 0.419608, 0, 1 )
self_modulate = Color( 1, 0.466667, 0, 1 )
margin_right = 4.0
margin_bottom = 14.0
mouse_filter = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 2 )
max_value = 150.0

[node name="VidaEnemigoTexto" type="Label" parent="MenudeCombate/MazmorraMenu2/Barras/VidaEnemigo"]
margin_left = 1.0
margin_top = 13.0
margin_right = 41.0
margin_bottom = 27.0
rect_rotation = 270.0
rect_scale = Vector2( 0.196073, 0.203776 )
text = "150"

[node name="VidaEnemigoName" type="Label" parent="MenudeCombate/MazmorraMenu2/Barras/VidaEnemigo"]
margin_left = 1.0
margin_top = 20.0
margin_right = 41.0
margin_bottom = 34.0
rect_rotation = 270.0
rect_scale = Vector2( 0.196073, 0.203776 )
text = "Jefe:"

[node name="Vida" type="ProgressBar" parent="MenudeCombate/MazmorraMenu2/Barras"]
modulate = Color( 0.956863, 0.235294, 0.0980392, 1 )
self_modulate = Color( 1, 0, 0, 1 )
light_mask = 0
margin_left = 8.0
margin_right = 12.0
margin_bottom = 14.0

[node name="VidaTexto" type="Label" parent="MenudeCombate/MazmorraMenu2/Barras/Vida"]
pause_mode = 1
physics_interpolation_mode = 1
margin_left = 1.0
margin_top = 13.0
margin_right = 60.0
margin_bottom = 27.0
rect_rotation = 270.0
rect_scale = Vector2( 0.2, 0.2 )
text = "100"

[node name="VidaName" type="Label" parent="MenudeCombate/MazmorraMenu2/Barras/Vida"]
pause_mode = 1
physics_interpolation_mode = 1
margin_left = 1.0
margin_top = 20.5
margin_right = 60.0
margin_bottom = 34.5
rect_rotation = 270.0
rect_scale = Vector2( 0.2, 0.2 )
text = "Vida:"

[node name="ManaResis" type="ProgressBar" parent="MenudeCombate/MazmorraMenu2/Barras"]
modulate = Color( 0, 0.439216, 1, 1 )
margin_left = 16.0
margin_right = 20.0
margin_bottom = 14.0

[node name="ManaTexto" type="Label" parent="MenudeCombate/MazmorraMenu2/Barras/ManaResis"]
margin_left = 1.0
margin_top = 13.0
margin_right = 25.0
margin_bottom = 27.0
rect_rotation = 270.0
rect_scale = Vector2( 0.2, 0.2 )
text = "100"

[node name="ManaName" type="Label" parent="MenudeCombate/MazmorraMenu2/Barras/ManaResis"]
margin_left = 1.0
margin_top = 22.3
margin_right = 39.0
margin_bottom = 36.3
rect_rotation = 270.0
rect_scale = Vector2( 0.2, 0.2 )
text = "Mana:"

[node name="Enemigo" type="TextureRect" parent="MenudeCombate/MazmorraMenu2"]
margin_left = 375.0
margin_top = 30.0
margin_right = 1275.0
margin_bottom = 879.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Habilidades" type="VBoxContainer" parent="MenudeCombate/MazmorraMenu2"]
margin_left = 450.0
margin_top = 400.0
margin_right = 490.0
margin_bottom = 468.0

[node name="Objetos" type="VBoxContainer" parent="MenudeCombate/MazmorraMenu2"]
margin_left = 650.0
margin_top = 400.0
margin_right = 690.0
margin_bottom = 468.0

[node name="LogCombate" type="RichTextLabel" parent="MenudeCombate/MazmorraMenu2"]
material = SubResource( 5 )
margin_left = 275.0
margin_top = 250.0
margin_right = 775.0
margin_bottom = 350.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
tab_size = 24
text = "Que Empiece el combate!!
"

[node name="InventarioMenu" type="Control" parent="MenudeCombate"]
margin_left = 70.0
margin_top = 460.0
margin_right = 190.0
margin_bottom = 460.0

[node name="HabilidadesMenu" type="Control" parent="MenudeCombate"]
margin_left = 70.0
margin_top = 490.0
margin_right = 190.0
margin_bottom = 490.0

[node name="TalentosMenu" type="Control" parent="MenudeCombate"]
margin_left = 70.0
margin_top = 520.0
margin_right = 190.0
margin_bottom = 520.0

[node name="OpcionesMenu" type="Control" parent="MenudeCombate"]
margin_left = 70.0
margin_top = 550.0
margin_right = 190.0
margin_bottom = 550.0
